Implement baudrate setting
Baud rate submenu and setting speed

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,7 +8,7 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 FIND_PACKAGE(PkgConfig REQUIRED)
 pkg_check_modules(MODBUS REQUIRED libmodbus)
 
-set (SRCS wbtool.cpp device.cpp main_menu.cpp menu.cpp)
+set (SRCS wbtool.cpp device.cpp main_menu.cpp baud_menu.cpp menu.cpp)
 
 add_executable(wbtool ${SRCS})
 target_include_directories(wbtool PRIVATE ${MODBUS_INCLUDE_DIRS})
