--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,4 +13,4 @@ set (SRCS wbtool.cpp device.cpp main_menu.cpp baud_menu.cpp menu.cpp)
 add_executable(wbtool ${SRCS})
 target_include_directories(wbtool PRIVATE ${MODBUS_INCLUDE_DIRS})
 target_link_directories(wbtool PRIVATE ${MODBUS_LIBRARY_DIRS})
-target_link_libraries(wbtool menu ncurses modbus)
+target_link_libraries(wbtool menu newt slang modbus)
