Add some WBMR-specific settings
Introduce infrastructure for adding device-specific menu items and implement
basic WBMR support.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,11 +10,13 @@ pkg_check_modules(MODBUS REQUIRED libmodbus)
 
 set (SRCS wbtool.cpp
           device.cpp
+	  wbmr_device.cpp
 	  menu.cpp
 	  main_menu.cpp
 	  baud_menu.cpp
 	  parity_menu.cpp
 	  stop_menu.cpp
+ 	  wbmr_menu.cpp
 	  error_popup.cpp)
 
 add_executable(wbtool ${SRCS})
